--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
     "dependencies": {
-      "axios": "^1.7.9",
-      "cors": "^2.8.5",
-      "express": "^4.21.2",
-      "openai": "^4.78.1"
+        "axios": "^1.7.9",
+        "cors": "^2.8.5",
+        "express": "^4.21.2",
+        "openai": "^4.78.1",
+        "url": "^0.11.4"
     },
     "type": "module"
-  }
+}
